--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -25,65 +25,44 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="125dp"
-        android:layout_height="52dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="87dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
         android:text="@string/title_fev1"
         android:textAllCaps="true"
-        android:textColor="#fd8f90"
-        android:textSize="30sp"
+        android:textColorLink="@color/blue"
+        android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/breath"
-        app:layout_constraintStart_toEndOf="@+id/cal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.655" />
+        app:layout_constraintTop_toTopOf="@id/fav"
+        android:layout_marginTop="170dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ImageView
         android:id="@+id/fav"
         android:layout_width="205dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:clickable="true"
         android:focusable="true"
         android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
         app:srcCompat="@drawable/lungs_icon" />
 
     <ImageView
         android:id="@+id/food"
         android:layout_width="92dp"
         android:layout_height="88dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
         android:focusable="true"
         android:onClick="onClick"
         app:layout_constraintBottom_toTopOf="@+id/fav"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/rsz_food_icon" />
 
@@ -91,36 +70,24 @@
         android:id="@+id/cal"
         android:layout_width="92dp"
         android:layout_height="88dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
         android:clickable="true"
         android:focusable="true"
         android:onClick="onClick"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/breath"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/feed"
-        app:layout_constraintVertical_bias="0.341"
         app:srcCompat="@drawable/rsz_cont_icon" />
 
     <ImageView
         android:id="@+id/feed"
         android:layout_width="92dp"
         android:layout_height="88dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginRight="120dp"
         android:clickable="true"
         android:focusable="true"
         android:onClick="onClick"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/qa"
         app:layout_constraintEnd_toStartOf="@+id/qa"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/rsz_contact_icon" />
 
     <ImageView
@@ -135,20 +102,17 @@
         android:clickable="true"
         android:focusable="true"
         android:onClick="onClick"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/qa"
+        android:layout_marginTop="70dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/cal"
         app:srcCompat="@drawable/rsz_br_icon" />
 
     <ImageView
         android:id="@+id/qa"
         android:layout_width="92dp"
         android:layout_height="88dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="190dp"
         android:clickable="true"
         android:focusable="true"
         android:onClick="onClick"
@@ -162,36 +126,25 @@
         android:id="@+id/medc"
         android:layout_width="92dp"
         android:layout_height="88dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="76dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="8dp"
         android:clickable="true"
         android:focusable="true"
         android:onClick="onClick"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.496"
+        app:layout_constraintBottom_toBottomOf="@id/sport"
+        app:layout_constraintEnd_toStartOf="@id/sport"
+        android:layout_marginRight="40dp"
         app:srcCompat="@drawable/rsz_med_icon" />
 
     <ImageView
         android:id="@+id/sport"
         android:layout_width="92dp"
         android:layout_height="88dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginRight="95dp"
         android:clickable="true"
         android:focusable="true"
+        android:layout_marginTop="40dp"
         android:onClick="onClick"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fav"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/medc"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
         app:srcCompat="@drawable/rsz_sport_icon" />
 
     <ImageView
@@ -211,4 +164,97 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/settings" />
 
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="תזונה"
+        android:textColorLink="@color/blue"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/food"
+        android:layout_marginTop="75dp"
+        app:layout_constraintEnd_toEndOf="@id/food"
+        app:layout_constraintStart_toStartOf="@id/food"/>
+
+    <TextView
+        android:id="@+id/textView28"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="חברתי"
+        android:textColorLink="@color/blue"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/feed"
+        android:layout_marginTop="75dp"
+        app:layout_constraintEnd_toEndOf="@id/feed"
+        app:layout_constraintStart_toStartOf="@id/feed"/>
+
+    <TextView
+        android:id="@+id/textView29"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="אנשי קשר"
+        android:textColorLink="@color/blue"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/cal"
+        android:layout_marginTop="80dp"
+        app:layout_constraintEnd_toEndOf="@id/cal"
+        app:layout_constraintStart_toStartOf="@id/cal"/>
+
+    <TextView
+        android:id="@+id/textView30"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="תרופות"
+        android:textColorLink="@color/blue"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/medc"
+        android:layout_marginTop="75dp"
+        app:layout_constraintEnd_toEndOf="@id/medc"
+        app:layout_constraintStart_toStartOf="@id/medc"/>
+
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:text="פעילות גופנית"
+        android:gravity="center"
+        android:textColorLink="@color/blue"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/sport"
+        android:layout_marginTop="75dp"
+        app:layout_constraintEnd_toEndOf="@id/sport"
+        app:layout_constraintStart_toStartOf="@id/sport"/>
+
+    <TextView
+        android:id="@+id/textView32"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:text="תרגול נשימתי"
+        android:textColorLink="@color/blue"
+        android:textSize="14sp"
+        android:gravity="center"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/breath"
+        android:layout_marginTop="75dp"
+        app:layout_constraintEnd_toEndOf="@id/breath"
+        app:layout_constraintStart_toStartOf="@id/breath"/>
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:text="שאלות ותשובות"
+        android:textColorLink="@color/blue"
+        android:textSize="14sp"
+        android:gravity="center"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/qa"
+        android:layout_marginTop="70dp"
+        app:layout_constraintEnd_toEndOf="@id/qa"
+        app:layout_constraintStart_toStartOf="@id/qa"/>
 </android.support.constraint.ConstraintLayout>
