--- a/app/src/main/res/layout/activity_add_nutrition.xml
+++ b/app/src/main/res/layout/activity_add_nutrition.xml
@@ -113,4 +113,16 @@
         app:layout_constraintEnd_toStartOf="@id/textView21"
         android:layout_marginRight="12dp" />
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="307dp"
+        android:layout_height="399dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="360dp"
+        android:alpha="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rsz_food_icon" />
+
 </android.support.constraint.ConstraintLayout>
