--- a/app/src/main/res/layout/activity_set_medicine.xml
+++ b/app/src/main/res/layout/activity_set_medicine.xml
@@ -5,11 +5,22 @@
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/rsz_background_dark_blue"
+    android:background="@drawable/rsz_dark_backgroung"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     tools:context=".set_medicine">
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="307dp"
+        android:layout_height="399dp"
+        android:layout_marginLeft="160dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="360dp"
+        android:alpha="0.15"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rsz_med_icon" />
     <Button
         android:id="@+id/addReminderBtn"
         android:layout_width="110dp"
@@ -29,7 +40,7 @@
         android:id="@+id/saveBtn"
         android:layout_width="156dp"
         android:layout_height="35dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/round_pink_button"
         android:text="@string/save"
         android:textColor="#ffffff"
@@ -47,7 +58,7 @@
         android:layout_marginTop="60dp"
         android:text="@string/med2"
         android:textAllCaps="true"
-        android:textColor="@color/colorAccent"
+        android:textColor="#ffffff"
         android:textSize="27sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,11 +70,11 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="90dp"
         android:text="@string/med2name"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintTop_toBottomOf="@id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginRight="30dp"
@@ -74,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="מועדי התראות:"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="24dp"
@@ -103,7 +114,7 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="390dp"
+        android:layout_width="270dp"
         android:layout_height="221dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +149,7 @@
         android:text="קבלת התראות"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintTop_toBottomOf="@id/addReminderBtn"
         app:layout_constraintEnd_toEndOf="@id/textView10"
         />
