--- a/app/src/main/res/layout/alarm.xml
+++ b/app/src/main/res/layout/alarm.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/common_google_signin_btn_text_dark_disabled"
     android:paddingEnd="16dp"
     android:paddingStart="16dp">
 
@@ -22,18 +21,20 @@
         android:layout_height="48dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="81dp"
+        android:layout_marginRight="20dp"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
-        tools:text="Expanded View" />
+        tools:text="Expanded View"
+        android:layout_alignParentRight="true" />
 
     <Button
         android:id="@+id/deleteAlarm"
-        android:layout_width="49dp"
-        android:layout_height="wrap_content"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="66dp"
-        android:background="@android:drawable/ic_delete" />
+        android:layout_marginLeft="40dp"
+        android:background="@android:drawable/ic_delete"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
