--- a/app/src/main/res/layout/activity_sign_up_details.xml
+++ b/app/src/main/res/layout/activity_sign_up_details.xml
@@ -54,7 +54,7 @@
 
     <EditText
         android:id="@+id/birthDate"
-        android:layout_width="wrap_content"
+        android:layout_width="217dp"
         android:layout_height="48dp"
         android:layout_marginEnd="136dp"
         android:layout_marginLeft="8dp"
@@ -158,7 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="13dp"
-        android:text="תאירך לידה:"
+        android:text="תאריך לידה:"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/birthDate"
@@ -211,72 +211,92 @@
 
     <ViewFlipper
         android:id="@+id/viewFlipper"
-        android:layout_width="225dp"
-        android:layout_height="207dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="129dp"
+        android:layout_height="127dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addCon">
+        app:layout_constraintTop_toBottomOf="@+id/addCon"
+        app:layout_constraintBottom_toTopOf="@id/button5">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
-            android:src="@drawable/rsz_cal_icon" />
+            android:src="@drawable/img1"
+            android:tag="img1"/>
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:scaleType="fitXY"
-            android:src="@drawable/pink_lungs" />
+            android:src="@drawable/img2"
+            android:tag="img2"/>
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:scaleType="fitXY"
-            android:src="@drawable/rsz_med_icon" />
+            android:src="@drawable/img3"
+            android:tag="img3"/>
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/img4"
+            android:tag="img4"/>
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/img5"
+            android:tag="img5"/>
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/img6"
+            android:tag="img6"/>
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/img7"
+            android:tag="img7"/>
     </ViewFlipper>
 
-    <Button
+    <ImageView
         android:id="@+id/next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Next"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="46dp"
+        android:layout_height="90dp"
+        android:rotation="180"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button5" />
+        app:layout_constraintHorizontal_bias="0.43"
+        app:layout_constraintStart_toEndOf="@+id/viewFlipper"
+        app:layout_constraintTop_toBottomOf="@+id/addCon"
+        app:layout_constraintBottom_toTopOf="@id/button5"
+        app:srcCompat="@drawable/back_btn" />
 
-    <Button
+    <ImageView
         android:id="@+id/previous"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/next"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
-        android:text="Prev"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button5"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_width="46dp"
+        android:layout_height="90dp"
+        app:layout_constraintEnd_toStartOf="@+id/viewFlipper"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addCon"
+        app:layout_constraintBottom_toTopOf="@id/button5"
+        app:srcCompat="@drawable/back_btn" />
 
 </android.support.constraint.ConstraintLayout>
