--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -21,29 +21,37 @@
         android:id="@+id/nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="אנונימי"
-        app:layout_constraintEnd_toStartOf="@id/image"
-        app:layout_constraintTop_toTopOf="@id/image"
+        app:layout_constraintEnd_toStartOf="@id/imageLogo"
+        app:layout_constraintTop_toTopOf="@id/imageLogo"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:textSize="20sp"
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="לפני 8 שעות"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/nickname"
         app:layout_constraintTop_toBottomOf="@id/nickname"/>
 
     <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toStartOf="@id/date"
+        app:layout_constraintBottom_toBottomOf="@id/date"
+        />
+
+    <TextView
         android:id="@+id/text"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:text="טקסטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטטט"
-        app:layout_constraintEnd_toEndOf="@id/image"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        android:layout_marginTop="28dp"/>
+        android:layout_marginTop="28dp"
+        android:text="בלה בלה בלה בלה"
+        app:layout_constraintEnd_toEndOf="@id/imageLogo"
+        app:layout_constraintTop_toBottomOf="@id/imageLogo" />
 </android.support.constraint.ConstraintLayout>
