--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -4,16 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#8FFF"
+   >
 
     <ImageView
         android:id="@+id/imageLogo"
         android:layout_width="36dp"
         android:layout_height="39dp"
-        app:srcCompat="@drawable/pink_lungs"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="24dp" />
 
@@ -32,7 +33,7 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@id/nickname"
         app:layout_constraintTop_toBottomOf="@id/nickname"/>
 
@@ -40,7 +41,7 @@
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toStartOf="@id/date"
         app:layout_constraintBottom_toBottomOf="@id/date"
@@ -48,10 +49,50 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="320dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="בלה בלה בלה בלה"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@id/imageLogo"
-        app:layout_constraintTop_toBottomOf="@id/imageLogo" />
+        app:layout_constraintTop_toBottomOf="@id/imageLogo"
+        android:textSize="18sp"
+        android:paddingBottom="20dp"/>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text">
+
+        <ImageView
+            android:id="@+id/likeImg"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/like"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="80dp"
+            android:paddingBottom="10dp"
+            />
+
+        <TextView
+            android:id="@+id/likesNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/likeImg"
+            app:layout_constraintBottom_toBottomOf="@id/likeImg"
+            android:layout_marginRight="8dp"
+            android:paddingBottom="10dp"
+
+            />
+
+        <TextView
+            android:id="@+id/commentsNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="80dp"
+            app:layout_constraintBottom_toBottomOf="@id/likeImg"
+            android:paddingBottom="10dp"
+            />
+
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
