--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -135,6 +135,23 @@
         app:srcCompat="@drawable/rsz_med_icon" />
 
     <ImageView
+        android:id="@+id/step"
+        android:layout_width="92dp"
+        android:layout_height="88dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="onClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/rsz_med_icon" />
+
+    <ImageView
         android:id="@+id/sport"
         android:layout_width="92dp"
         android:layout_height="88dp"
