--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -72,6 +72,16 @@
             app:layout_constraintBottom_toBottomOf="@id/nickname"
             app:layout_constraintEnd_toStartOf="@id/nickname" />
 
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimary"
+            app:layout_constraintTop_toBottomOf="@id/textView26"/>
+
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
@@ -79,7 +89,6 @@
             android:layout_marginEnd="70dp"
             android:layout_marginRight="70dp"
             android:text="טקסט"
-            android:textColor="#ffffff"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -91,7 +100,6 @@
             android:layout_marginEnd="60dp"
             android:layout_marginRight="60dp"
             android:text="תמונה"
-            android:textColor="#ffffff"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/text"
             app:layout_constraintEnd_toStartOf="@id/text" />
@@ -103,7 +111,6 @@
             android:layout_marginEnd="60dp"
             android:layout_marginRight="60dp"
             android:text="מיקום"
-            android:textColor="#ffffff"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/image"
             app:layout_constraintEnd_toStartOf="@id/image" />
@@ -113,8 +120,7 @@
             android:layout_width="36dp"
             android:layout_height="39dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
              />
