--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -56,12 +56,22 @@
         app:layout_constraintTop_toBottomOf="@id/imageLogo"
         android:textSize="18sp"
         android:paddingBottom="20dp"/>
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toTopOf="@id/layout"/>
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text">
+        app:layout_constraintTop_toBottomOf="@id/text"
+        android:paddingTop="8dp">
 
         <ImageView
             android:id="@+id/likeImg"
