--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -105,4 +105,12 @@
             />
 
     </android.support.constraint.ConstraintLayout>
+
+    <android.support.v7.widget.LinearLayout
+        android:id="@+id/commentLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/layout">
+    </android.support.v7.widget.LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
