--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -106,11 +106,12 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <android.support.v7.widget.LinearLayout
+    <LinearLayout
         android:id="@+id/commentLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/layout">
-    </android.support.v7.widget.LinearLayout>
+        app:layout_constraintTop_toBottomOf="@id/layout"
+        android:orientation="horizontal">
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
