--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#8FFF"
-   >
+    android:layout_marginBottom="8dp">
 
     <ImageView
         android:id="@+id/imageLogo"
